# narrify-ai

./: .env  .gitignore  README.md  main.py  pyproject.toml
app/agents/: creative_director_agent.py  script_agent.py  storyboard_agent.py  summary_agent.py
app/clients/: comfyui_client.py
app/config/: comfy.py  image_styles.py  render.py
app/core/: config.py  logger.py
app/domain/models/: camera.py  camera_response.py  chapter.py  character.py  character_response.py  environment.py  environment_response.py  frame.py  frame_response.py  scene.py  scene_response.py  script.py  script_response.py  story.py  storyboard.py  storyboard_response.py  video_blueprint.py  video_blueprint_response.py  video_script.py  visual_context.py  visual_context_response.py
app/loaders/: base.py  pdf_loader.py
app/prompts/: creative_director.txt  scene_planner.txt  script_writer.txt  storyboard.txt  summary.txt
app/renderers/: image_renderer.py
app/services/: llm.py  prompt_enhancer.py  prompt_exporter.py  text_cleaner.py
app/workflows/: dreamshaper.json
tests/: test_prompt_enhancer.py  test_text_cleaner.py
